<resources>
    <string name="app_name">HomeControl</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="welcome_message">Welcome to Home Control\nPress the button to continue</string>
    <string name="button_continue">Continue</string>

    <string name="devices_list_title">Device List:</string>
    <string name="selected_device_label">Selected device: %1$s</string>
    <string name="status_label">Status: </string>
    <string name="room_label">Room: </string>
    <string name="status_on">on</string>
    <string name="status_off">off</string>
    <string name="status_open">open</string>
    <string name="status_closed">closed</string>
    <string name="status_locked">locked</string>
    <string name="status_unlocked">unlocked</string>

    <string name="settings_title">Settings</string>
    <string name="settings_select_room">Select room:</string>
    <string name="settings_select_mode">Select operating mode:</string>
    <string name="settings_mode_automatic">Automatic Mode (default)</string>
    <string name="settings_mode_manual">Manual Mode (Not recommended)</string>
    <string name="settings_mode_eco">Eco Mode</string>
    <string name="settings_dark_theme">Dark theme</string>
    <string name="settings_save">SAVE SETTINGS</string>

    <string name="settings_saved_title">Settings saved!</string>
    <string name="settings_summary_room">Room: %1$s</string>
    <string name="settings_summary_mode">Mode: %1$s</string>
    <string name="settings_summary_theme">Dark theme: %1$s</string>
    <string name="settings_enabled">enabled</string>
    <string name="settings_disabled">disabled</string>
    <string name="success_icon_desc">Success Icon</string>

    <string-array name="room_options">
        <item>Living Room</item>
        <item>Kitchen</item>
        <item>Bedroom</item>
        <item>Bathroom</item>
    </string-array>
    <string name="about_license">GNU GPLv3</string>
    <string name="about_author">Made by Luka Brdar</string>
    <string name="about_disclaimer">School Project</string>
    <string name="about_icon_desc">App Icon</string>
</resources>