<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/devicesFragment"
        android:icon="@drawable/ic_devices"
        android:title="@string/menu_devices"
        app:showAsAction="never" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/aboutFragment"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>